# tcvm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  rust-toolchain.toml  rustc-ice-2025-07-20T19_06_03-12579.txt  test.lua  test_parse_literals.lua
.cargo/: config.toml
cli/: Cargo.toml
derive/: Cargo.toml
derive/src/: lib.rs
examples/: eval.rs
src/: instruction.rs  interp.rs  lib.rs  main.rs  num.rs  value.rs  value2.rs
test-files/: comment.lua  const_fold.lua  const_fold_branch.lua  const_local_fold.lua  const_local_multi_level.lua  const_local_no_fold.lua  const_local_outer_fold.lua  const_no_fold.lua  decimal_numeral.lua  declare.lua  errnnil_runtime.lua  for_counter_readonly_err.lua  freereg_and_call.lua  freereg_call_arg_reclaim.lua  freereg_chain.lua  freereg_discarded_call.lua  freereg_for_num_temps.lua  freereg_nested_call.lua  function.lua  global_const_assign_err.lua  global_const_star.lua  global_decl.lua  global_init_shadow.lua  global_multiret.lua  global_multiret_expand.lua  global_nested_propagation.lua  global_self_init_err.lua  global_shadows_local.lua  global_star.lua  global_star_nested.lua  global_undeclared_err.lua  hello.lua  hex_numeral.lua  if.lua  if_empty_goto.lua  if_empty_nested.lua  int_overflow_numeral.lua  issue_65_conditional_return.lua  iterative_fib_bench.lua  jens.lua  (+24 more)
tests/: async_sequence_basic.rs  coroutine_basic.rs  coroutine_close.rs  coroutine_error.rs  coroutine_introspection.rs  coroutine_propagation.rs  coroutine_resume_misuse.rs  coroutine_wrap.rs  generic_for.rs  host_resume.rs  intfloat_compare.rs  (+12 more)
(+146 files in other folders)
