[workspace]
resolver = "3"
members = [".", "derive"]

[workspace.package]
version = "0.1.0"
authors = ["Joel Wejdenstål <joel.wejdenstal@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/xacrimon/tcvm"

[package]
name = "tcvm"
description = "TBD"
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tcvm-derive = { path = "derive", version = "0.1.0" }
hashbrown = { version = "0.15.4", default-features = false, features = ["nightly"] }
foldhash = { version = "0.1.5", default-features = false }
paste = "1.0.15"
