[package]
name = "tcvm-derive"
description = "TBD"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["default", "visit-mut"] }
synstructure = "0.13.2"
